[gd_scene load_steps=11 format=4 uid="uid://d386dflcjjjjj"]

[ext_resource type="Script" uid="uid://c3fp2ea51v1i2" path="res://scripts/fases/fase_1.gd" id="1_8fkse"]
[ext_resource type="PackedScene" uid="uid://c86jlwpogfbsp" path="res://scenes/player.tscn" id="1_uerje"]
[ext_resource type="Texture2D" uid="uid://d0q2g65ahgok" path="res://assets/sprites/world_tileset.png" id="2_jjemw"]
[ext_resource type="PackedScene" uid="uid://ctviyoqq6o4dy" path="res://scenes/tree.tscn" id="3_5ee53"]
[ext_resource type="PackedScene" uid="uid://b6trlabjsdh8i" path="res://scenes/GameOverScreen.tscn" id="3_7wkkc"]
[ext_resource type="PackedScene" uid="uid://dtf72a8mpaucd" path="res://scenes/pause.tscn" id="4_dwtt2"]
[ext_resource type="PackedScene" uid="uid://bpyl8eaf2x0uh" path="res://scenes/Mob.tscn" id="5_ph2m8"]
[ext_resource type="PackedScene" uid="uid://jom8n5j74lep" path="res://scenes/bosses/boss.tscn" id="8_jjemw"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_mbpw1"]
texture = ExtResource("2_jjemw")
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:0/0 = 0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:0/0 = 0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:0/0 = 0
3:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:0/0 = 0
4:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:0/0 = 0
5:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:0/0 = 0
6:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:0/0 = 0
7:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
8:0/0 = 0
8:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
0:1/0 = 0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:1/0 = 0
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:1/0 = 0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:1/0 = 0
3:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:1/0 = 0
4:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:1/0 = 0
5:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:1/0 = 0
6:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:1/0 = 0
7:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
8:1/0 = 0
8:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
0:2/0 = 0
0:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:2/0 = 0
1:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:2/0 = 0
2:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:2/0 = 0
3:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:2/0 = 0
4:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:2/0 = 0
5:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:2/0 = 0
6:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:2/0 = 0
7:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
8:2/0 = 0
8:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
2:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
0:4/0 = 0
1:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
0:5/0 = 0
1:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
1:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
0:7/0 = 0
1:7/0 = 0
3:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
6:9/0 = 0
7:9/0 = 0
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
4:10/0 = 0
6:10/0 = 0
0:11/0 = 0
1:11/0 = 0
2:11/0 = 0
3:11/0 = 0
4:11/0 = 0
5:11/0 = 0
0:12/0 = 0
1:12/0 = 0
2:12/0 = 0
3:12/0 = 0
4:12/0 = 0
0:13/0 = 0
1:13/0 = 0
2:13/0 = 0
3:13/0 = 0
4:13/0 = 0
5:13/0 = 0
0:14/0 = 0
1:14/0 = 0
2:14/0 = 0
3:14/0 = 0
4:14/0 = 0
0:15/0 = 0
1:15/0 = 0
2:15/0 = 0
3:15/0 = 0
2:4/size_in_atlas = Vector2i(3, 3)
2:4/0 = 0

[sub_resource type="TileSet" id="TileSet_tv3xg"]
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_mbpw1")

[node name="Fase1" type="Node2D"]
script = ExtResource("1_8fkse")

[node name="Map" type="Node2D" parent="."]

[node name="TileMapLayer" type="TileMapLayer" parent="Map"]
position = Vector2(400, 500)
tile_map_data = PackedByteArray("AADz////AAAAAAAAAAD0////AAAAAAAAAAD1////AAAAAAAAAAD2////AAAAAAAAAAD3////AAAAAAAAAAD4////AAAAAAAAAAD5////AAAAAAAAAAD6////AAAAAAAAAAD7////AAAAAAAAAAD8////AAAAAAAAAAD9////AAAAAAAAAAD+////AAAAAAAAAAD/////AAAAAAAAAAAAAP//AAAAAAAAAAABAP//AAAAAAAAAAACAP//AAAAAAEAAAADAP//AAAAAAEAAAAEAP//AAAAAAEAAAAEAP7/AAAAAAEAAAAFAP7/AAAAAAEAAAAGAP7/AAAAAAEAAAAGAP3/AAAAAAEAAAAHAP3/AAAAAAEAAAAIAP3/AAAAAAEAAAAJAP3/AAAAAAEAAAAKAP3/AAAAAAEAAAALAP3/AAAAAAEAAAAMAP3/AAAAAAEAAAAMAPz/AAAAAAEAAAANAPz/AAAAAAEAAAANAPv/AAAAAAEAAAATAPn/AAAAAAEAAAATAPj/AAAAAAEAAAAUAPj/AAAAAAEAAAAVAPj/AAAAAAEAAAAWAPj/AAAAAAEAAAAWAPn/AAAAAAEAAAAWAPr/AAAAAAEAAAAWAPv/AAAAAAEAAAAVAPv/AAAAAAEAAAAVAPz/AAAAAAEAAAAUAPz/AAAAAAEAAAAUAPv/AAAAAAEAAAAUAPr/AAAAAAEAAAAUAPn/AAAAAAEAAAAVAPn/AAAAAAEAAAAVAPr/AAAAAAEAAAATAPv/AAAAAAEAAAATAPz/AAAAAAEAAAASAPz/AAAAAAEAAAASAP3/AAAAAAEAAAASAPv/AAAAAAEAAAASAPr/AAAAAAEAAAATAPr/AAAAAAEAAAASAAIAAAAAAAEAAAASAAMAAAAAAAEAAAASAAQAAAAAAAEAAAATAAQAAAAAAAEAAAAUAAQAAAAAAAEAAAAUAAUAAAAAAAEAAAAVAAUAAAAAAAEAAAAWAAUAAAAAAAEAAAAXAAUAAAAAAAEAAAAXAAQAAAAAAAEAAAAYAAQAAAAAAAEAAAAZAAQAAAAAAAEAAAAaAAQAAAAAAAEAAAAbAAQAAAAAAAEAAAAcAAQAAAAAAAEAAAAcAAUAAAAAAAEAAAAdAAUAAAAAAAEAAAAeAAUAAAAAAAEAAAAfAAUAAAAAAAEAAAAgAAUAAAAAAAEAAAAhAAUAAAAAAAEAAAAiAAUAAAAAAAEAAAAjAAUAAAAAAAEAAAAkAAUAAAAAAAEAAAAkAAQAAAAAAAEAAAAlAAQAAAAAAAEAAAAmAAQAAAAAAAEAAAACAP7/AAAAAAAAAAADAP7/AAAAAAAAAAAEAP3/AAAAAAAAAAAFAP3/AAAAAAAAAAAGAPz/AAAAAAAAAAAHAPz/AAAAAAAAAAAIAPz/AAAAAAAAAAAJAPz/AAAAAAAAAAAKAPz/AAAAAAAAAAALAPz/AAAAAAAAAAAMAPv/AAAAAAAAAAANAPr/AAAAAAAAAAASAPn/AAAAAAAAAAATAPf/AAAAAAAAAAAUAPf/AAAAAAAAAAAVAPf/AAAAAAAAAAAWAPf/AAAAAAAAAAASAAEAAAAAAAAAAAATAAMAAAAAAAAAAAAUAAMAAAAAAAAAAAAVAAQAAAAAAAAAAAAWAAQAAAAAAAAAAAAXAAMAAAAAAAAAAAAYAAMAAAAAAAAAAAAZAAMAAAAAAAAAAAAaAAMAAAAAAAAAAAAbAAMAAAAAAAAAAAAcAAMAAAAAAAAAAAAdAAQAAAAAAAAAAAAeAAQAAAAAAAAAAAAfAAQAAAAAAAAAAAAgAAQAAAAAAAAAAAAhAAQAAAAAAAAAAAAXAPf/AAAAAAAAAAAYAPf/AAAAAAAAAAAZAPf/AAAAAAAAAAAaAPf/AAAAAAAAAAAbAPf/AAAAAAAAAAAbAPb/AAAAAAAAAAAcAPb/AAAAAAAAAAAdAPb/AAAAAAAAAAAeAPb/AAAAAAAAAAAeAPX/AAAAAAAAAAAfAPX/AAAAAAAAAAAgAPX/AAAAAAAAAAAhAPX/AAAAAAAAAAAhAPT/AAAAAAAAAAAiAPT/AAAAAAAAAAAXAPv/AAAAAAEAAAAYAPv/AAAAAAEAAAAZAPv/AAAAAAEAAAAaAPv/AAAAAAEAAAAaAPr/AAAAAAEAAAAbAPr/AAAAAAEAAAAcAPr/AAAAAAEAAAAdAPr/AAAAAAEAAAAeAPr/AAAAAAEAAAAfAPr/AAAAAAEAAAAgAPr/AAAAAAEAAAAhAPr/AAAAAAEAAAAiAPr/AAAAAAEAAAAjAPr/AAAAAAEAAAAfAPv/AAAAAAEAAAAfAPn/AAAAAAEAAAAgAPn/AAAAAAEAAAAgAPj/AAAAAAEAAAAhAPj/AAAAAAEAAAAiAPj/AAAAAAEAAAAfAPj/AAAAAAEAAAAeAPj/AAAAAAEAAAAdAPj/AAAAAAEAAAAeAPf/AAAAAAEAAAAfAPf/AAAAAAEAAAAfAPb/AAAAAAEAAAAgAPb/AAAAAAEAAAAhAPb/AAAAAAEAAAAiAPX/AAAAAAEAAAAiAPb/AAAAAAEAAAAiAPf/AAAAAAEAAAAhAPf/AAAAAAEAAAAgAPf/AAAAAAEAAAAhAPn/AAAAAAEAAAAiAPn/AAAAAAEAAAAdAPn/AAAAAAEAAAAcAPn/AAAAAAEAAAAdAPf/AAAAAAEAAAAcAPf/AAAAAAEAAAAeAPn/AAAAAAEAAAAbAPn/AAAAAAEAAAAaAPn/AAAAAAEAAAAZAPj/AAAAAAEAAAAYAPj/AAAAAAEAAAAXAPj/AAAAAAEAAAAaAPj/AAAAAAEAAAAbAPj/AAAAAAEAAAAcAPj/AAAAAAEAAAAZAPn/AAAAAAEAAAAYAPn/AAAAAAEAAAAXAPn/AAAAAAEAAAAXAPr/AAAAAAEAAAAYAPr/AAAAAAEAAAAZAPr/AAAAAAEAAAAbAPv/AAAAAAEAAAAcAPv/AAAAAAEAAAAgAPv/AAAAAAEAAAAhAPv/AAAAAAEAAAAeAPv/AAAAAAEAAAAdAPv/AAAAAAEAAAAOAAAAAAAAAAAAAAAPAAAAAAAAAAAAAAAQAAAAAAAAAAAAAAAQAAEAAAAAAAAAAAARAAEAAAAAAAAAAAAOAAEAAAAAAAEAAAAPAAEAAAAAAAEAAAAPAAIAAAAAAAEAAAAOAAIAAAAAAAEAAAAOAAMAAAAAAAEAAAAPAAQAAAAAAAEAAAAQAAQAAAAAAAEAAAAQAAMAAAAAAAEAAAAQAAIAAAAAAAEAAAAPAAMAAAAAAAEAAAARAAIAAAAAAAEAAAARAAMAAAAAAAEAAAARAAQAAAAAAAEAAAAOAAQAAAAAAAEAAAASAAUAAAAAAAEAAAATAAUAAAAAAAEAAAARAAUAAAAAAAEAAAAQAAUAAAAAAAEAAAAPAAUAAAAAAAEAAAAOAAUAAAAAAAEAAAAYAAUAAAAAAAEAAAAZAAUAAAAAAAEAAAAaAAUAAAAAAAEAAAAbAAUAAAAAAAEAAAA=")
tile_set = SubResource("TileSet_tv3xg")

[node name="Trees" type="Node2D" parent="Map"]

[node name="Tree" parent="Map/Trees" instance=ExtResource("3_5ee53")]
position = Vector2(380, 481)

[node name="Mobs" type="Node2D" parent="Map"]
process_mode = 3

[node name="Mob" parent="Map/Mobs" instance=ExtResource("5_ph2m8")]
position = Vector2(405, 472)

[node name="Mob2" parent="Map/Mobs" instance=ExtResource("5_ph2m8")]
position = Vector2(839, 534)

[node name="Mob3" parent="Map/Mobs" instance=ExtResource("5_ph2m8")]
position = Vector2(804, 347)

[node name="Player" parent="." instance=ExtResource("1_uerje")]
position = Vector2(124, 235)

[node name="PlayerStart" type="Marker2D" parent="."]
position = Vector2(236, 447)

[node name="GameOverScreen" parent="." instance=ExtResource("3_7wkkc")]
process_mode = 3

[node name="Pause" parent="." instance=ExtResource("4_dwtt2")]
process_mode = 3

[node name="Boss" parent="." instance=ExtResource("8_jjemw")]
position = Vector2(998, 515)

[connection signal="causar_dano" from="." to="Player" method="_on_fase_1_causar_dano"]
[connection signal="responder_pergunta" from="Map/Mobs/Mob" to="." method="_on_mob_responder_pergunta"]
[connection signal="responder_pergunta" from="Map/Mobs/Mob2" to="." method="_on_mob_responder_pergunta"]
[connection signal="responder_pergunta" from="Map/Mobs/Mob3" to="." method="_on_mob_responder_pergunta"]
[connection signal="game_over" from="Player" to="." method="_on_player_game_over"]
[connection signal="reiniciar_fase" from="GameOverScreen" to="." method="_on_game_over_screen_reiniciar_fase"]
[connection signal="voltar_menu" from="GameOverScreen" to="." method="_on_game_over_screen_voltar_menu"]
